<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation.MainMenuActivity"
    android:background="@drawable/list_border_orange">

    <TextView android:text="@string/title_screen_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeText"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp" />

    <TextView android:text="@string/title_screen_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameText"
        android:textSize="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/welcomeText"
        android:layout_marginTop="15dp" />

    <TextView android:text="@string/title_screen_CPGA_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CGPAText"
        android:textSize="22dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/usernameText"
        android:layout_marginTop="100dp" />

    <TextView android:text="@string/title_screen_current_semester_GPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentSemesterGrade"
        android:textSize="22dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/CGPAText"
        android:layout_marginTop="15dp" />

    <TextView android:text="@string/title_screen_continue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/continueText"
        android:textColor="#FFFFFF"
        android:textSize="14dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/currentSemesterGrade"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goToSelectSemesterButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:onClick="goToSelectSemesterButtonClicked"/>


</RelativeLayout>
