<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mark.gradetracker.AddGradeSectionActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_grade_section_title"
        android:textSize="30dp"
        android:id="@+id/addGradeSectionTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#ff9933"
        android:gravity="center"/>

    <TextView
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/add_grade_section_name_text"
        android:textSize="15dp"
        android:id="@+id/gradeSectionNameText"
        android:layout_below="@+id/addGradeSectionTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:id="@+id/gradeSectionNameEditText"
        android:layout_below="@+id/addGradeSectionTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="170dp"
        android:gravity="center"
        android:inputType="text"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/add_grade_section_weight_text"
        android:textSize="15dp"
        android:id="@+id/gradeSectionWeightText"
        android:layout_below="@+id/gradeSectionNameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"/>

    <EditText
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:id="@+id/gradeSectionWeightEditText"
        android:layout_below="@+id/gradeSectionNameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="250dp"
        android:inputType="number"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_grade_section_weight_percent_text"
        android:textSize="15dp"
        android:id="@+id/gradeSectionWeightPercentText"
        android:layout_below="@+id/gradeSectionNameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="290dp"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add_grade_section_grades_text"
        android:textSize="20dp"
        android:id="@+id/gradesNameText"
        android:layout_below="@+id/gradeSectionWeightText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"/>

    <Button
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:text="@string/add_grade_section_add_grade_button"
        android:textColor="#FFFFFF"
        android:id="@+id/addNewMark"
        android:layout_alignTop="@+id/gradesNameText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="3dp"
        android:onClick="addMarkButtonClicked"
        android:background="#009900"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_grade_section_confirmation_button"
        android:id="@+id/addGradeSectionButton"
        android:layout_above="@+id/settingsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:onClick="addGradeSectionButtonClicked"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_grade_section_high_marks_checkbox"
        android:id="@+id/isTopMarksCheckBox"
        android:layout_above="@+id/addGradeSectionButton"
        android:layout_marginLeft="6dp"
        android:onClick="isTopMarksCheckBoxClicked"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/list_border"
        android:id="@+id/newMarksList"
        android:layout_below="@+id/gradesNameText"
        android:layout_above="@id/isTopMarksCheckBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_grade_section_settings_button"
        android:id="@+id/settingsButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#ff6666"
        android:onClick="settingsButtonClicked" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_grade_section_high_marks_text_1"
        android:id="@+id/topMarksText1"
        android:layout_above="@+id/addGradeSectionButton"
        android:layout_toRightOf="@+id/isTopMarksCheckBox"
        android:layout_toEndOf="@+id/isTopMarksCheckBox"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="6dp"/>

    <EditText
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/topMarksEditText"
        android:textSize="14dp"
        android:layout_above="@+id/addGradeSectionButton"
        android:layout_toRightOf="@+id/topMarksText1"
        android:layout_toEndOf="@+id/topMarksText1"
        android:inputType="number"
        android:gravity="center"
        android:layout_marginBottom="-7dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_grade_section_high_marks_text_2"
        android:id="@+id/topMarksText2"
        android:layout_above="@+id/addGradeSectionButton"
        android:layout_toRightOf="@+id/topMarksEditText"
        android:layout_toEndOf="@+id/topMarksEditText"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="2dp"/>

</RelativeLayout>
