<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adding.AddSemesterActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_semester_title"
        android:textSize="30dp"
        android:id="@+id/selectSemesterTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#FFC107"
        android:gravity="center"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add_semester_name_text"
        android:textSize="20dp"
        android:id="@+id/semesterNameText"
        android:layout_below="@+id/selectSemesterTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:layout_marginLeft="15dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/semesterNameEditText"
        android:layout_below="@+id/selectSemesterTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="100dp"
        android:inputType="textCapSentences"
        android:gravity="center"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add_semester_courses_text"
        android:textSize="20dp"
        android:id="@+id/coursesNameText"
        android:layout_below="@+id/semesterNameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_semester_add_course_button"
        android:id="@+id/addNewCourse"
        android:layout_alignTop="@+id/coursesNameText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="-10dp"
        android:onClick="addCourseButtonClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_semester_confirmation_button"
        android:id="@+id/addSemesterButton"
        android:layout_above="@+id/settingsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:onClick="addSemesterButtonClicked"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/list_border"
        android:id="@+id/newCoursesList"
        android:layout_below="@+id/coursesNameText"
        android:layout_above="@id/addSemesterButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_semester_settings_button"
        android:id="@+id/settingsButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#EF9A9A"
        android:onClick="settingsButtonClicked"
        android:layout_margin="10dp"/>


</RelativeLayout>
