<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_border">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_mark_pop_up_title"
        android:textSize="30dp"
        android:id="@+id/addMarkTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/list_border_orange"
        android:gravity="center"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add_mark_pop_up_name_text"
        android:textSize="20dp"
        android:id="@+id/markNameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addMarkTitle"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"/>

    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/markNameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addMarkTitle"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="100dp"
        android:inputType="textCapWords"
        android:gravity="center"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add_mark_pop_up_grade_text"
        android:textSize="20dp"
        android:id="@+id/markGradeText"
        android:layout_below="@+id/markNameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="15dp"/>

    <EditText
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/markGradeEditText"
        android:layout_below="@+id/markNameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="130dp"
        android:inputType="numberDecimal"
        android:gravity="center"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add_mark_pop_up_grade_percent_sign_text"
        android:textSize="20dp"
        android:id="@+id/markGradePercentSignText"
        android:layout_below="@+id/markNameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="200dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_mark_pop_up_confirmation_button"
        android:id="@+id/addMarkButton"
        android:onClick="addMarkButtonClicked"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>


</RelativeLayout>