<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation.SelectSemesterActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/select_semester_title"
        android:textSize="30dp"
        android:id="@+id/selectSemesterTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#ff9933"
        android:gravity="center"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/semesterListView"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/selectSemesterTitle"
        android:layout_above="@id/addSemesterButton"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/select_semester_add_semester_button"
        android:id="@+id/addSemesterButton"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/settingsButton"
        android:background="#c2d6d6"
        android:onClick="addSemesterButtonClicked" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_semester_settings_button"
        android:id="@+id/settingsButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#ff6666"
        android:onClick="settingsClicked" />


</RelativeLayout>
